; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_route.c_rt6_nh_find_match.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_route.c_rt6_nh_find_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fib6_nh = type { i32 }
%struct.fib6_nh_frl_arg = type { i32, i32, i32, i32, i32, %struct.fib6_nh* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fib6_nh*, i8*)* @rt6_nh_find_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rt6_nh_find_match(%struct.fib6_nh* %0, i8* %1) #0 {
  %3 = alloca %struct.fib6_nh*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.fib6_nh_frl_arg*, align 8
  store %struct.fib6_nh* %0, %struct.fib6_nh** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.fib6_nh_frl_arg*
  store %struct.fib6_nh_frl_arg* %7, %struct.fib6_nh_frl_arg** %5, align 8
  %8 = load %struct.fib6_nh*, %struct.fib6_nh** %3, align 8
  %9 = load %struct.fib6_nh_frl_arg*, %struct.fib6_nh_frl_arg** %5, align 8
  %10 = getelementptr inbounds %struct.fib6_nh_frl_arg, %struct.fib6_nh_frl_arg* %9, i32 0, i32 5
  store %struct.fib6_nh* %8, %struct.fib6_nh** %10, align 8
  %11 = load %struct.fib6_nh*, %struct.fib6_nh** %3, align 8
  %12 = load %struct.fib6_nh_frl_arg*, %struct.fib6_nh_frl_arg** %5, align 8
  %13 = getelementptr inbounds %struct.fib6_nh_frl_arg, %struct.fib6_nh_frl_arg* %12, i32 0, i32 4
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.fib6_nh_frl_arg*, %struct.fib6_nh_frl_arg** %5, align 8
  %16 = getelementptr inbounds %struct.fib6_nh_frl_arg, %struct.fib6_nh_frl_arg* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.fib6_nh_frl_arg*, %struct.fib6_nh_frl_arg** %5, align 8
  %19 = getelementptr inbounds %struct.fib6_nh_frl_arg, %struct.fib6_nh_frl_arg* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.fib6_nh_frl_arg*, %struct.fib6_nh_frl_arg** %5, align 8
  %22 = getelementptr inbounds %struct.fib6_nh_frl_arg, %struct.fib6_nh_frl_arg* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.fib6_nh_frl_arg*, %struct.fib6_nh_frl_arg** %5, align 8
  %25 = getelementptr inbounds %struct.fib6_nh_frl_arg, %struct.fib6_nh_frl_arg* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @find_match(%struct.fib6_nh* %11, i32 %14, i32 %17, i32 %20, i32 %23, i32 %26)
  ret i32 %27
}

declare dso_local i32 @find_match(%struct.fib6_nh*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
